updated prject and add some teste cases on the Login Test Page

--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a4858c">  <td>25/01/14 23:44:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@d86a6f]">&gt;&gt;setup</td> 
+<tr bgcolor="dcb865">  <td>25/02/06 00:49:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginWithInvalidCredentials()[pri:2, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">verifyLoginWithInvalidCredentials</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="dcb865">  <td>25/02/06 00:49:25</td>   <td>8469</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginWithInvalidEmailAndValidPassword()[pri:3, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">verifyLoginWithInvalidEmailAndValidPassword</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="dcb865">  <td>25/02/06 00:49:34</td>   <td>18083</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="dcb865">  <td>25/02/06 00:49:06</td>   <td>-10224</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginWithValidCredentials(java.lang.String,java.lang.String)[pri:1, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">verifyLoginWithValidCredentials</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="dcb865">  <td>25/02/06 00:49:43</td>   <td>26444</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="dcb865">  <td>25/02/06 00:49:34</td>   <td>18083</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="dcb865">  <td>25/02/06 00:49:43</td>   <td>26444</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="dcb865">  <td>25/02/06 00:49:43</td>   <td>26444</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="dcb865">  <td>25/02/06 00:49:42</td>   <td>26238</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginWithoutProvidingCredentials()[pri:5, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">verifyLoginWithoutProvidingCredentials</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="dcb865">  <td>25/02/06 00:49:33</td>   <td>17331</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginWithValidEmailAndInvalidPassword()[pri:4, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">verifyLoginWithValidEmailAndInvalidPassword</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="dcb865">  <td>25/02/06 00:49:34</td>   <td>18083</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="dcb865">  <td>25/02/06 00:49:43</td>   <td>26444</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="dcb865">  <td>25/02/06 00:49:34</td>   <td>18083</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="dcb865">  <td>25/02/06 00:49:43</td>   <td>26444</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="dcb865">  <td>25/02/06 00:49:34</td>   <td>18083</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
 </table>
