--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,6 +11,22 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>verifyLoginWithoutProvidingCredentials</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyLoginWithInvalidEmailAndValidPassword</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyLoginWithInvalidCredentials</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyLoginWithValidEmailAndInvalidPassword</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>verifyLoginWithValidCredentials</td>
 <td>&nbsp;</td></tr>
 <tr>
