Implement Extent Report

--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,6 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.aidasoftware.qa.testcases.LoginTest.verifyLoginWithInvalidEmailAndValidPassword</td></tr>
+<tr><td>com.aidasoftware.qa.testcases.LoginTest.verifyLoginWithValidCredentials</td></tr>
+<tr><td>com.aidasoftware.qa.testcases.LoginTest.verifyLoginWithValidEmailAndInvalidPassword</td></tr>
+<tr><td>com.aidasoftware.qa.testcases.LoginTest.verifyLoginWithoutProvidingCredentials</td></tr>
 </table>
