--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,34 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dcb865">  <td>25/02/13 23:10:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">&gt;&gt;setup</td> 
+<tr bgcolor="91f5ca">  <td>25/06/19 00:24:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@644baf4a]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="dcb865">  <td>25/02/13 23:10:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">&gt;&gt;setup</td> 
+<tr bgcolor="91f5ca">  <td>25/06/19 00:25:22</td>   <td>27981</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@644baf4a]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="dcb865">  <td>25/02/13 23:10:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="dcb865">  <td>25/02/13 23:10:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="dcb865">  <td>25/02/13 23:10:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="dcb865">  <td>25/02/13 23:10:50</td>   <td>12625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="dcb865">  <td>25/02/13 23:10:50</td>   <td>12625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="dcb865">  <td>25/02/13 23:10:50</td>   <td>12625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="dcb865">  <td>25/02/13 23:10:50</td>   <td>12625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="dcb865">  <td>25/02/13 23:10:50</td>   <td>12625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="dcb865">  <td>25/02/13 23:10:10</td>   <td>-26867</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginWithInvalidCredentials()[pri:2, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">verifyLoginWithInvalidCredentials</td> 
-  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="dcb865">  <td>25/02/13 23:10:24</td>   <td>-13333</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginWithInvalidEmailAndValidPassword()[pri:3, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">verifyLoginWithInvalidEmailAndValidPassword</td> 
-  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="dcb865">  <td>25/02/13 23:09:40</td>   <td>-57061</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginWithValidCredentials(java.lang.String,java.lang.String)[pri:1, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">verifyLoginWithValidCredentials</td> 
-  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="dcb865">  <td>25/02/13 23:10:36</td>   <td>-853</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginWithValidEmailAndInvalidPassword()[pri:4, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">verifyLoginWithValidEmailAndInvalidPassword</td> 
-  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="dcb865">  <td>25/02/13 23:10:50</td>   <td>12444</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginWithoutProvidingCredentials()[pri:5, instance:com.aidasoftware.qa.testcases.LoginTest@f0c8a99]">verifyLoginWithoutProvidingCredentials</td> 
+<tr bgcolor="91f5ca">  <td>25/06/19 00:25:17</td>   <td>23205</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginWithInvalidCredentials()[pri:2, instance:com.aidasoftware.qa.testcases.LoginTest@644baf4a]">verifyLoginWithInvalidCredentials</td> 
   <td>main@1361960727</td>   <td></td> </tr>
 </table>
