Added Dashboard page and POSQuotepage

--- a/test-output/ExtentReports/extentReport.html
+++ b/test-output/ExtentReports/extentReport.html
@@ -8,7 +8,7 @@
 <title>Aida Software result report</title>
 <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/extent-framework/extent-github-cdn@b00a2d0486596e73dd7326beacf352c639623a0e/commons/img/logo.png">
 <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/extent-framework/extent-github-cdn@b00a2d0486596e73dd7326beacf352c639623a0e/commons/img/logo.png">
-<link href="https://cdn.jsdelivr.net/gh/extent-framework/extent-github-cdn@d6562a79075e061305ccfdb82f01e5e195e2d307/spark/css/spark-style.css" rel="stylesheet" />
+<link href="https://cdn.jsdelivr.net/gh/extent-framework/extent-github-cdn@ce8b10435bcbae260c334c0d0c6b61d2c19b6168/spark/css/spark-style.css" rel="stylesheet" />
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/gh/extent-framework/extent-github-cdn@7cc78ce/spark/js/jsontree.js"></script>
 <style type="text/css"></style></head><body class="spa -report dark">
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Aida Automation Result Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">23/06/2025 04:01:11</span></a>
+<a href="#"><span class="badge badge-primary">29/06/2025 01:06:40</span></a>
 </li>
 </ul>
 </div>
@@ -82,7 +82,7 @@
           <div class="test-detail">
             <p class="name">verifyLoginWithValidCredentials</p>
             <p class="text-sm">
-              <span>4:02:12 pm</span> / <span>00:00:01:746</span>
+              <span>1:07:05 am</span> / <span>00:00:04:354</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -91,12 +91,13 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">verifyLoginWithValidCredentials</h5>
-<span class='badge badge-success'>06.23.2025 4:02:12 pm</span>
-<span class='badge badge-danger'>06.23.2025 4:02:14 pm</span>
-<span class='badge badge-default'>00:00:01:746</span>
+<span class='badge badge-success'>06.29.2025 1:07:05 am</span>
+<span class='badge badge-danger'>06.29.2025 1:07:10 am</span>
+<span class='badge badge-default'>00:00:04:354</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
-<span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
-<span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
+<span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
+<span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
+<span title='Expand all nodes' class='badge badge-default pointer float-right et'><i class="fa fa-expand"></i></span>
 </div>
 </div>
 </div><div class="detail-body mt-4">
@@ -105,14 +106,14 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>4:02:12 pm</td>
+        <td>1:07:05 am</td>
         <td>
           verifyLoginWithValidCredentialsStarted executing!
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>4:02:14 pm</td>
+        <td>1:07:10 am</td>
         <td>
           verifyLoginWithValidCredentialsGot Succussfully Executed!
         </td>
@@ -129,7 +130,7 @@
           <div class="test-detail">
             <p class="name">verifyLoginWithInvalidCredentials</p>
             <p class="text-sm">
-              <span>4:02:39 pm</span> / <span>00:00:05:833</span>
+              <span>1:07:24 am</span> / <span>00:00:03:246</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -138,12 +139,13 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">verifyLoginWithInvalidCredentials</h5>
-<span class='badge badge-success'>06.23.2025 4:02:39 pm</span>
-<span class='badge badge-danger'>06.23.2025 4:02:44 pm</span>
-<span class='badge badge-default'>00:00:05:833</span>
+<span class='badge badge-success'>06.29.2025 1:07:24 am</span>
+<span class='badge badge-danger'>06.29.2025 1:07:27 am</span>
+<span class='badge badge-default'>00:00:03:246</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
-<span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
-<span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
+<span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
+<span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
+<span title='Expand all nodes' class='badge badge-default pointer float-right et'><i class="fa fa-expand"></i></span>
 </div>
 </div>
 </div>    <div class="row mb-3"><div class="col-md-3">
@@ -156,21 +158,21 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>4:02:39 pm</td>
+        <td>1:07:24 am</td>
         <td>
           verifyLoginWithInvalidCredentialsStarted executing!
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>4:02:44 pm</td>
+        <td>1:07:27 am</td>
         <td>
           verifyLoginWithInvalidCredentials
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>4:02:44 pm</td>
+        <td>1:07:27 am</td>
         <td>
           verifyLoginWithInvalidCredentials Got Failed! 
         </td>
@@ -187,7 +189,7 @@
           <div class="test-detail">
             <p class="name">verifyLoginWithInvalidEmailAndValidPassword</p>
             <p class="text-sm">
-              <span>4:03:45 pm</span> / <span>00:00:09:557</span>
+              <span>1:07:40 am</span> / <span>00:00:00:400</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -196,12 +198,13 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">verifyLoginWithInvalidEmailAndValidPassword</h5>
-<span class='badge badge-success'>06.23.2025 4:03:45 pm</span>
-<span class='badge badge-danger'>06.23.2025 4:03:54 pm</span>
-<span class='badge badge-default'>00:00:09:557</span>
+<span class='badge badge-success'>06.29.2025 1:07:40 am</span>
+<span class='badge badge-danger'>06.29.2025 1:07:40 am</span>
+<span class='badge badge-default'>00:00:00:400</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
-<span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
-<span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
+<span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
+<span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
+<span title='Expand all nodes' class='badge badge-default pointer float-right et'><i class="fa fa-expand"></i></span>
 </div>
 </div>
 </div><div class="detail-body mt-4">
@@ -210,14 +213,14 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>4:03:45 pm</td>
+        <td>1:07:40 am</td>
         <td>
           verifyLoginWithInvalidEmailAndValidPasswordStarted executing!
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>4:03:54 pm</td>
+        <td>1:07:40 am</td>
         <td>
           verifyLoginWithInvalidEmailAndValidPasswordGot Succussfully Executed!
         </td>
@@ -234,7 +237,7 @@
           <div class="test-detail">
             <p class="name">verifyLoginWithValidEmailAndInvalidPassword</p>
             <p class="text-sm">
-              <span>4:04:25 pm</span> / <span>00:00:00:573</span>
+              <span>1:07:50 am</span> / <span>00:00:00:429</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -243,12 +246,13 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">verifyLoginWithValidEmailAndInvalidPassword</h5>
-<span class='badge badge-success'>06.23.2025 4:04:25 pm</span>
-<span class='badge badge-danger'>06.23.2025 4:04:26 pm</span>
-<span class='badge badge-default'>00:00:00:573</span>
+<span class='badge badge-success'>06.29.2025 1:07:50 am</span>
+<span class='badge badge-danger'>06.29.2025 1:07:51 am</span>
+<span class='badge badge-default'>00:00:00:429</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
-<span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
-<span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
+<span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
+<span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
+<span title='Expand all nodes' class='badge badge-default pointer float-right et'><i class="fa fa-expand"></i></span>
 </div>
 </div>
 </div><div class="detail-body mt-4">
@@ -257,14 +261,14 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>4:04:25 pm</td>
+        <td>1:07:50 am</td>
         <td>
           verifyLoginWithValidEmailAndInvalidPasswordStarted executing!
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>4:04:26 pm</td>
+        <td>1:07:51 am</td>
         <td>
           verifyLoginWithValidEmailAndInvalidPasswordGot Succussfully Executed!
         </td>
@@ -281,7 +285,7 @@
           <div class="test-detail">
             <p class="name">verifyLoginWithoutProvidingCredentials</p>
             <p class="text-sm">
-              <span>4:04:40 pm</span> / <span>00:00:00:163</span>
+              <span>1:08:00 am</span> / <span>00:00:00:148</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -290,12 +294,13 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">verifyLoginWithoutProvidingCredentials</h5>
-<span class='badge badge-success'>06.23.2025 4:04:40 pm</span>
-<span class='badge badge-danger'>06.23.2025 4:04:40 pm</span>
-<span class='badge badge-default'>00:00:00:163</span>
+<span class='badge badge-success'>06.29.2025 1:08:00 am</span>
+<span class='badge badge-danger'>06.29.2025 1:08:00 am</span>
+<span class='badge badge-default'>00:00:00:148</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=5</span>
-<span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
-<span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
+<span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
+<span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
+<span title='Expand all nodes' class='badge badge-default pointer float-right et'><i class="fa fa-expand"></i></span>
 </div>
 </div>
 </div><div class="detail-body mt-4">
@@ -304,14 +309,14 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>4:04:40 pm</td>
+        <td>1:08:00 am</td>
         <td>
           verifyLoginWithoutProvidingCredentialsStarted executing!
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>4:04:40 pm</td>
+        <td>1:08:00 am</td>
         <td>
           verifyLoginWithoutProvidingCredentialsGot Succussfully Executed!
         </td>
@@ -335,13 +340,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>23/06/2025 04:01:11</h3>
+<h3>29/06/2025 01:06:40</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>23/06/2025 04:04:41</h3>
+<h3>29/06/2025 01:08:00</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -411,7 +416,7 @@
 </div></div>
 <script>
 var timeline = {
-"verifyLoginWithValidCredentials":1.746,"verifyLoginWithInvalidCredentials":5.833,"verifyLoginWithInvalidEmailAndValidPassword":9.557,"verifyLoginWithValidEmailAndInvalidPassword":0.573,"verifyLoginWithoutProvidingCredentials":0.163
+"verifyLoginWithValidCredentials":4.354,"verifyLoginWithInvalidCredentials":3.246,"verifyLoginWithInvalidEmailAndValidPassword":0.4,"verifyLoginWithValidEmailAndInvalidPassword":0.429,"verifyLoginWithoutProvidingCredentials":0.148
 };
 </script>
 <div class="row">
@@ -431,11 +436,11 @@ var timeline = {
 </tr>
 <tr>
 <td>Email</td>
-<td></td>
+<td>umesh_kumar@flexsin.org</td>
 </tr>
 <tr>
 <td>Password</td>
-<td></td>
+<td>Umesh@123</td>
 </tr>
 <tr>
 <td>Operating System</td>
@@ -485,6 +490,6 @@ infoEvents: 6
       </div>
     </div>
   </div>
-<script src="https://cdn.jsdelivr.net/gh/extent-framework/extent-github-cdn@d6562a79075e061305ccfdb82f01e5e195e2d307/spark/js/spark-script.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/extent-framework/extent-github-cdn@ce8b10435bcbae260c334c0d0c6b61d2c19b6168/spark/js/spark-script.js"></script>
 <script type="text/javascript"></script></body>
 </html>
